# team-hunter

client/: package-lock.json  package.json
client/src/: App.tsx
client/src/pages/Create/: Create.tsx
client/src/pages/Explore/: Explore.tsx
client/src/types/: team.ts
server/: pyproject.toml  requirements.txt
server/app/: models.py  serializers.py  urls.py  views.py
server/app/migrations/: 0001_initial.py
server/config/: settings.py  urls_auth.py
